infra-setup/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pace3-ingress
spec:
  rules:
    - host: pace3.lauf-gegen-rechts.de
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: pace3
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pace3
                port:
                  number: 3000
